--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "ejs-lint": "^2.0.1",
@@ -40,6 +42,8 @@
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "graceful-fs": "^4.2.11",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3"
